<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/container"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:text="@string/button_pay"
            style="@style/CalculatorPayButton"
            android:layout_alignParentBottom="true"/>

    <LinearLayout
            android:id="@+id/container_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_pay"
            android:orientation="horizontal"
            android:background="@color/lightGrey"
            android:baselineAligned="false">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


            <Button
                    android:id="@+id/btn_7"
                    android:layout_width="match_parent"
                    android:text="@string/button_7"
                    style="@style/CalculatorNumberButton"/>

            <Button
                    android:id="@+id/btn_4"
                    android:layout_width="match_parent"
                    android:text="@string/button_4"
                    style="@style/CalculatorNumberButton"/>

            <Button
                    android:id="@+id/btn_1"
                    android:layout_width="match_parent"
                    android:text="@string/button_1"
                    style="@style/CalculatorNumberButton"/>

            <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="match_parent"
                    android:text="@string/button_backspace"
                    style="@style/CalculatorNumberButton"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <Button
                    android:id="@+id/btn_8"
                    android:layout_width="match_parent"
                    android:text="@string/button_8"
                    style="@style/CalculatorNumberButton"/>

            <Button
                    android:id="@+id/btn_5"
                    android:layout_width="match_parent"
                    android:text="@string/button_5"
                    style="@style/CalculatorNumberButton"/>

            <Button
                    android:id="@+id/btn_2"
                    android:layout_width="match_parent"
                    android:text="@string/button_2"
                    style="@style/CalculatorNumberButton"/>

            <Button
                    android:id="@+id/btn_0"
                    android:layout_width="match_parent"
                    android:text="@string/button_0"
                    style="@style/CalculatorNumberButton"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <Button
                    android:id="@+id/btn_9"
                    android:layout_width="match_parent"
                    android:text="@string/button_9"
                    style="@style/CalculatorNumberButton"/>

            <Button
                    android:id="@+id/btn_6"
                    android:layout_width="match_parent"
                    android:text="@string/button_6"
                    style="@style/CalculatorNumberButton"/>

            <Button
                    android:id="@+id/btn_3"
                    android:layout_width="match_parent"
                    android:text="@string/button_3"
                    style="@style/CalculatorNumberButton"/>

            <Button
                    android:id="@+id/btn_percent"
                    android:layout_width="match_parent"
                    android:text="@string/button_percent"
                    style="@style/CalculatorNumberButton"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <Button
                    android:id="@+id/btn_division"
                    android:layout_width="match_parent"
                    android:text="@string/button_division"
                    style="@style/CalculatorSymbolButton"/>

            <Button
                    android:id="@+id/btn_multiplication"
                    android:layout_width="match_parent"
                    android:text="@string/button_times"
                    style="@style/CalculatorSymbolButton"/>

            <Button
                    android:id="@+id/btn_subtraction"
                    android:layout_width="match_parent"
                    android:text="@string/button_minus"
                    style="@style/CalculatorSymbolButton"/>

            <Button
                    android:id="@+id/btn_addition"
                    android:layout_width="match_parent"
                    android:text="@string/button_plus"
                    style="@style/CalculatorBigSymbolButton"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/container_calculator">

        <LinearLayout
                android:id="@+id/layout_calculator_input"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">

            <TextView
                    android:id="@+id/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:textSize="40sp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/zero"/>

        </LinearLayout>

        <HorizontalScrollView
                android:id="@+id/layout_calculation_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_above="@id/layout_calculator_input"
                android:layout_alignParentEnd="true">

            <TextView
                    android:id="@+id/text_equation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/headerTextColor"
                    android:layout_gravity="end|center_vertical"/>
        </HorizontalScrollView>

    </RelativeLayout>

    <RelativeLayout
            android:visibility="gone"
            android:id="@+id/loading_overlay"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@color/colorBlackOverlay"
            android:layout_centerInParent="true">
        <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>