<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="id.mikaapp.mika.agent.credential.ChangePasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@null">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_change_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentInsetStart="@null"
                app:elevation="@null"
                android:weightSum="1">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/change_password"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBar"
            android:padding="20dp"
            android:orientation="vertical">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/old_password"/>

        <EditText
                android:id="@+id/input_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/PasswordEditText"
                android:layout_marginBottom="10dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"/>

        <EditText
                android:id="@+id/input_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/PasswordEditText"
                android:layout_marginBottom="10dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_repeat_password"/>

        <EditText
                android:id="@+id/input_repeat_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/PasswordEditText"
                android:layout_marginBottom="10dp"/>

        <Button
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_gravity="bottom"
                style="@style/BaseButton"
                android:layout_marginBottom="10dp"/>
    </LinearLayout>

</RelativeLayout>
